# mini-redis

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: store.cpp  store.hpp  value.hpp
src/decorators/: istore.hpp  logging_store.hpp
src/eviction/: eviction_policy.hpp  logging_store.hpp  lru_policy.hpp
src/network/: server.cpp  server.hpp
src/protocol/: resp_parser.cpp  resp_parser.hpp  resp_writer.hpp
